# str_manip

./: CMakeLists.txt  README.md
include/str_manip/: join.h  split.h
tests/: catch.hpp  test_join.cpp  test_split.cpp
